# nbsapi

./: LICENSE.txt  MANIFEST  MANIFEST.in  NBSapi.py  README.md  pyproject.toml  setup.py
NBSapi/: NBSapi.py  __init__.py
NBSapi/tests/: GetVoices.py  Save_to_audio_file.py  SetVoice.py  __init__.py  control_speaking.py  speak_wait.py  speak_without_wait.py
